force-app/main/default/objects/Course_Attempt__c.object
<CustomObject>
    <description>Course attempt represents the courses a Contact is related to.</description>
    <fields>
        <fullName>Achieved_Credit_Points__c</fullName>
        <description>Total credit points achieved</description>
        <inlineHelpText>Total credit points achieved</inlineHelpText>
        <label>Achieved CP</label>
        <summarizedField>Unit_Attempt__c.Achieved_Credit_Points__c</summarizedField>
        <summaryFilterItems>
            <field>Unit_Attempt__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed, Duplicate</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_Attempt__c.Course_Attempt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Agent_Code__c</fullName>
        <formula>Application_Course_Preference__r.Application__r.Agent__r.Callista_Org_Unit_Code__c</formula>
        <label>Application Agent Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The application course preference related to this course attempt (eg. Originating ACP)</description>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Course Attempts</relationshipLabel>
        <relationshipName>Course_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <label>Attendance Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <label>Internal Mode</label>
                </value>
                <value>
                    <fullName>EX</fullName>
                    <label>External Mode</label>
                </value>
                <value>
                    <fullName>MM</fullName>
                    <label>Multi-mode</label>
                </value>
                <value>
                    <fullName>MO</fullName>
                    <label>Monash Online</label>
                </value>
                <value>
                    <fullName>OL</fullName>
                    <label>Open Learning</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <label>Attendance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FT</fullName>
                    <label>Full Time</label>
                </value>
                <value>
                    <fullName>PT</fullName>
                    <label>Part Time</label>
                </value>
                <value>
                    <fullName>OL</fullName>
                    <label>Open Learning</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <description>Attendance Mode and Type</description>
        <formula>CASE(
TEXT(Attendance_Mode__c)
, &apos;EX&apos;, &apos;External Mode&apos;
, &apos;IN&apos;, &apos;Internal Mode&apos;
, &apos;MM&apos;, &apos;Multi-Mode&apos;
, &apos;MO&apos;, &apos;Monash Online&apos;
, &apos;OL&apos;, &apos;Open Learning&apos;
, text(Attendance_Mode__c)
)

+ if(!ISBLANK(TEXT(Attendance_Type__c)), &apos;/&apos;,&apos;&apos;) +

CASE(
TEXT(Attendance_Type__c)
, &apos;FT&apos;, &apos;Full Time&apos;
, &apos;PT&apos;, &apos;Part Time&apos;
, &apos;OL&apos;, &apos;Open Learning&apos;
,TEXT(Attendance_Type__c)
)</formula>
        <inlineHelpText>Attendance Mode and Type</inlineHelpText>
        <label>Attendance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COO_Id__c</fullName>
        <label>COO Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Admission_Application_Id__c</fullName>
        <label>Callista Admission Application Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_External_Id__c</fullName>
        <description>Holds a concatenation of the Callista Person Id (from &apos;Contact.Person_Id_unique__c&apos;), and underscore(&apos;_&apos;), and the Course Code (from &apos;Course__c.Name&apos;). This is a unique combination (for academic courses).</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is evaluated and set by the system.</inlineHelpText>
        <label>Callista_External_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Country__c</fullName>
        <description>Country of the course attempt primary campus</description>
        <label>Campus Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRUNEI</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURMA (MYANMAR)</fullName>
                </value>
                <value>
                    <fullName>CAMBODIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>CHINA, PEOPLE&apos;S REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>COCOS (KEELING) ISLAND</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>COOK ISLANDS</fullName>
                </value>
                <value>
                    <fullName>CROATIA</fullName>
                </value>
                <value>
                    <fullName>CYPRUS</fullName>
                </value>
                <value>
                    <fullName>CZECHOSLOVAKIA</fullName>
                </value>
                <value>
                    <fullName>DENMARK</fullName>
                </value>
                <value>
                    <fullName>ECUADOR</fullName>
                </value>
                <value>
                    <fullName>EGYPT</fullName>
                </value>
                <value>
                    <fullName>EL SALVADOR</fullName>
                </value>
                <value>
                    <fullName>FIJI</fullName>
                </value>
                <value>
                    <fullName>FINLAND</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>GREECE</fullName>
                </value>
                <value>
                    <fullName>HONG KONG</fullName>
                </value>
                <value>
                    <fullName>HUNGARY</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campus_Location_Description__c</fullName>
        <description>Location description of the course attempt primary campus</description>
        <label>Campus Location Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Location_Type__c</fullName>
        <description>Location type of the course attempt primary campus</description>
        <label>Campus Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Primary campus of the course attempt</description>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUNWAY</fullName>
                    <label>Sunway</label>
                </value>
                <value>
                    <fullName>GIPPSLAND</fullName>
                    <label>Gippsland</label>
                </value>
                <value>
                    <fullName>PENINSULA</fullName>
                    <label>Peninsula</label>
                </value>
                <value>
                    <fullName>MALAYSIA</fullName>
                    <label>Malaysia</label>
                </value>
                <value>
                    <fullName>SAFRICA</fullName>
                    <label>South Africa</label>
                </value>
                <value>
                    <fullName>CAULFIELD</fullName>
                    <label>Caulfield</label>
                </value>
                <value>
                    <fullName>BERWICK</fullName>
                    <label>Berwick</label>
                </value>
                <value>
                    <fullName>PARKVILLE</fullName>
                    <label>Parkville</label>
                </value>
                <value>
                    <fullName>CLAYTON</fullName>
                    <label>Clayton</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <description>Commencement date of the course attempt</description>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.Full_Name__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Id__c</fullName>
        <description>Person ID of the related Contact</description>
        <formula>Contact__r.Person_ID_unique__c</formula>
        <label>Contact Person Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Reference to the contact who pursues this course</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Attempts</relationshipLabel>
        <relationshipName>Course_Attempts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_Status_Ranking__c</fullName>
        <description>System Field. 

The priority order when assigning a primary SCA to a contact. Transferred SCA are considered the least interesting, hence they are relegated to the bottom.</description>
        <formula>CASE(   UPPER(Text(Course_Attempt_Status__c))  , 
&apos;ENROLLED&apos;,10, 
&apos;INTERMIT&apos;, 20, 
&apos;INACTIVE&apos;, 30, 
&apos;UNCONFIRM&apos;, 40,
&apos;DISCONTIN&apos;, IF(OR(BEGINS(Discontinuation_Reason__c,&apos;31&apos;),BEGINS(Discontinuation_Reason__c,&apos;04&apos;)),70,50),
&apos;COMPLETED&apos;, 60,
999
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Discontin</fullName>
                    <label>Discontinued</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Unconfirm</fullName>
                    <label>Unconfirmed</label>
                </value>
                <value>
                    <fullName>Intermit</fullName>
                    <label>Intermission</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Code_Dup__c</fullName>
        <description>This should be in sync with Course_Code__c (as formula field), but is defined as text to be used in the duplication rule.</description>
        <inlineHelpText>This field is set by the system and captures the course code.</inlineHelpText>
        <label>Course Code Dup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Contains the course code (without the version). It is derived from the Course lookup relationship.</description>
        <formula>Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Faculty_Code__c</fullName>
        <description>Faculty code associated with the course attempt</description>
        <formula>Course__r.Faculty_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faculty Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level__c</fullName>
        <description>The level of the course associated with the course attempt. Referenced from the asosciated course.</description>
        <formula>TEXT(Course__r.Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level_of_Study__c</fullName>
        <description>Level of study for the course associated with the course attempt. Referenced from the associated course.</description>
        <formula>Course__r.Level_Description__c</formula>
        <label>Course Level of Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Managing_Faculty__c</fullName>
        <description>Managing faculty of the course being attempted.</description>
        <formula>TEXT(Course__r.Managing_Faculty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managing Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Requirements_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have the course requirements been completed?</description>
        <inlineHelpText>Have the course requirements been completed?</inlineHelpText>
        <label>Course Req Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Requirements_Completion_Date__c</fullName>
        <description>The dates the course requirements were met</description>
        <inlineHelpText>The dates the course requirements were met</inlineHelpText>
        <label>Course Req Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Short_Title__c</fullName>
        <formula>Course__r.Short_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Short Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Sub_Level__c</fullName>
        <formula>TEXT(Course__r.Sub_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Sub Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <description>Title of the course being attempted.</description>
        <formula>Course__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version__c</fullName>
        <description>Version of the course being attempted.</description>
        <formula>Course__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to the course (incl. version) of the course attempt</description>
        <label>Course</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Value does not match the type of allowed courses an attempt record can be related to.</errorMessage>
            <filterItems>
                <field>Course__c.Type__c</field>
                <operation>equals</operation>
                <value>Course-All</value>
            </filterItems>
            <filterItems>
                <field>Course__c.Type__c</field>
                <operation>equals</operation>
                <value>Short Course</value>
            </filterItems>
            <filterItems>
                <field>Course__c.Type__c</field>
                <operation>equals</operation>
                <value>Short_Course</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Attempts</relationshipLabel>
        <relationshipName>Course_Attempts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deleted_In_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discontinuation_Reason__c</fullName>
        <label>Discontinuation Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinued_Date__c</fullName>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_Credit_Points__c</fullName>
        <description>- This is used by the Academic Progress Snapshot to surface the stat around total enrolled credit points.</description>
        <label>Enrolled CP</label>
        <summarizedField>Unit_Attempt__c.Enrolled_Credit_Points__c</summarizedField>
        <summaryFilterItems>
            <field>Unit_Attempt__c.Status__c</field>
            <operation>equals</operation>
            <value>Enrolled</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_Attempt__c.Course_Attempt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Student_Course_Year__c</fullName>
        <description>Estimated year of the course the student is up to in the course attempt. Loosely derived within Callista.</description>
        <label>Estimated Student Course Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Category_Code__c</fullName>
        <label>Fee Category Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option_Description__c</fullName>
        <label>Fee Payment Option Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option_End_Date__c</fullName>
        <label>Fee Payment Option End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option_Start_Date__c</fullName>
        <label>Fee Payment Option Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option__c</fullName>
        <label>Fee Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fee-Help</fullName>
                </value>
                <value>
                    <fullName>204-EL</fullName>
                </value>
                <value>
                    <fullName>331-D</fullName>
                </value>
                <value>
                    <fullName>P-CSP</fullName>
                </value>
                <value>
                    <fullName>230</fullName>
                </value>
                <value>
                    <fullName>201-EL</fullName>
                </value>
                <value>
                    <fullName>202</fullName>
                </value>
                <value>
                    <fullName>330</fullName>
                </value>
                <value>
                    <fullName>302</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>301</fullName>
                </value>
                <value>
                    <fullName>204-I</fullName>
                </value>
                <value>
                    <fullName>220</fullName>
                </value>
                <value>
                    <fullName>230-MO</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>202-07</fullName>
                </value>
                <value>
                    <fullName>201</fullName>
                </value>
                <value>
                    <fullName>301-MO</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>201-EL-P10</fullName>
                </value>
                <value>
                    <fullName>201-07</fullName>
                </value>
                <value>
                    <fullName>302-MO</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>T-CSP</fullName>
                </value>
                <value>
                    <fullName>270-97</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>310-77D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Unit_Enrolment_Date__c</fullName>
        <description>First unit enrolment date of the course attempt. 
eg. Getting the earliest enrolment date of all unit attempts related to the course attempt.</description>
        <label>First Unit Enrolment Date</label>
        <summarizedField>Unit_Attempt__c.Enrolment_Date__c</summarizedField>
        <summaryForeignKey>Unit_Attempt__c.Course_Attempt__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <description>A grade point average is a number representing the average value of the accumulated final grades earned in courses over time. More commonly called a GPA, a student&apos;s grade point average is calculated by adding up all accumulated final grades and dividing that figure by the number of grades awarded.
The usual range is 1.0 to 5.0 (with 3 points of precision)</description>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Granted_Advanced_Standing_Credit_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Advanced standing credit points, granted against this course attempt.

Integrated field.</description>
        <inlineHelpText>Advanced standing credit points</inlineHelpText>
        <label>Granted Adv Standing CP</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Intermit_Start_Date__c</fullName>
        <description>This date will be populated when the intermission start date is updated from Null. This should indicate when Intermission processing commenced.

The original value will be retained if intermission periods are sequential.</description>
        <label>Intermit Processing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Comments__c</fullName>
        <label>Intermission Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_End_Date__c</fullName>
        <label>Intermission End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Future_Comments__c</fullName>
        <label>Future Intermit Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_Future_End_Date__c</fullName>
        <label>Future Intermit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Future_Start_Date__c</fullName>
        <label>Future Intermit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Future_Voluntary_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future Intermit Voluntary Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Int_Start_Date__c</fullName>
        <label>Intermission Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Voluntary_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermission Voluntary Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JRG_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Job Ready Graduate indicator - student has commonwealth assistance and has a derived commencement date 2022 and beyond.</description>
        <inlineHelpText>Job Ready Graduate - CSP, HECS-HELP, FEE-HELP commencing 2022 onwards</inlineHelpText>
        <label>JRG Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JRG_f__c</fullName>
        <description>Visual indicator of JRG status</description>
        <formula>IF (JRG_Ind__c
, IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb.png&quot;, &quot;JRG Student&quot;, 16, 16)
, IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb_off.png&quot;, &quot;Non-JRG Student&quot;, 16, 16)
)</formula>
        <inlineHelpText>Job Ready Graduate - CSP, HECS-HELP, FEE-HELP commencing 2022 onwards</inlineHelpText>
        <label>JRG Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Unit_Enrolment_Date__c</fullName>
        <description>Last unit enrolment date of the course attempt. 
eg. Getting latest enrolment date of all unit attempts related to the course attempt.</description>
        <label>Latest Unit Enrolment Date</label>
        <summarizedField>Unit_Attempt__c.Enrolment_Date__c</summarizedField>
        <summaryForeignKey>Unit_Attempt__c.Course_Attempt__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_Completion_Period__c</fullName>
        <label>Nom Completion Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_Completion_Year__c</fullName>
        <label>Nom Completion Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Unit_Attempts__c</fullName>
        <description>Count of active unit attempts related to the course attempt. Active unit attempts have a status of &quot;Enrolled&quot;</description>
        <label>Active Unit Attempts</label>
        <summaryFilterItems>
            <field>Unit_Attempt__c.Status__c</field>
            <operation>equals</operation>
            <value>Enrolled</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_Attempt__c.Course_Attempt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Unit_Attempt__c</fullName>
        <description>Count of completed unit attempts related to the course attempt. Completed unit attempts have a status of &quot;Completed&quot;</description>
        <label>Completed Unit Attempt</label>
        <summaryFilterItems>
            <field>Unit_Attempt__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_Attempt__c.Course_Attempt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Faculty_Code__c</fullName>
        <formula>Course__r.Partner_Faculty_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Faculty Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Faculty_Description__c</fullName>
        <formula>Course__r.Partner_Faculty_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <label>Person Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Application_Id__c</fullName>
        <label>Portal Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Credit_Points__c</fullName>
        <description>Credit Points remaining for course completion.

Calculated from course total credit, minus the achieved and granted totals.</description>
        <formula>Course__r.Points__c - Achieved_Credit_Points__c - Granted_Advanced_Standing_Credit_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Credit Points remaining for course completion</inlineHelpText>
        <label>Remaining CP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Credit_Points__c</fullName>
        <description>The total required credit points for course completion</description>
        <formula>Course__r.Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total required credit points for course completion</inlineHelpText>
        <label>Required CP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SS_CourseCodeDescription__c</fullName>
        <formula>Course__r.Name + &apos; - &apos; + Course__r.Course_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <description>Indicate the type of student of the course attempt. Ie. International, Domestic or Unspecified</description>
        <label>Student Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WAM_GPA_Last_Refresh_Date__c</fullName>
        <label>WAM-GPA Last Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WAM__c</fullName>
        <description>The Weighted Average Mark (WAM) is a more precise measure of your academic performance than the Grade Point Average. This is because we base the calculation on your actual marks and the year level of each unit. The WAM is the average mark you achieve across all completed units in a course.</description>
        <label>WAM</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Course Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Course__c</columns>
        <columns>Course_Title__c</columns>
        <columns>Course_Attempt_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Granted_Advanced_Standing_Credit_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>